# chatripper

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  assets.qrc  docker-compose.yml
cmake/: FindCcache.cmake  config-chatripper.h.cmake  config-circus.h.cmake
data/: preload.json
docs/: architecture.md  building.md  design.md  docker.md  modules.md
python/modules/: qircd.py
src/: assets.qrc  ctx.cpp  ctx.h  main.cpp
src/core/: account.cpp  account.h  channel.cpp  channel.h  metadata.cpp  metadata.h  permission.cpp  permission.h  qtypes.cpp  qtypes.h  role.cpp  role.h  server.cpp  server.h  upload.cpp  upload.h
src/irc/: caps.h  client_connection.cpp  client_connection.h  modes.cpp  modes.h  server.cpp  server.h  threaded_server.cpp  threaded_server.h  utils.cpp  utils.h  worker.cpp  worker.h
src/irc/files/: motd.txt
src/lib/: bitflags.h  config.cpp  config.h  globals.cpp  globals.h  meilisearch.cpp  meilisearch.h  sql.cpp  sql.h  utils.cpp  utils.h
src/lib/logger_std/: logger_std.cpp
src/python/: interpreter.cpp  interpreter.h  manager.cpp  manager.h  module.cpp  module.h  qircd.py  type_registry.cpp  type_registry.h  utils.cpp  utils.h
src/python/files/: events.py  models.py  qircd.py
src/python/qircd/: events.py  models.py  qircd.py
src/web/: ratelimiter.cpp  ratelimiter.h  sessionstore.cpp  sessionstore.h  webserver.cpp  webserver.h
src/web/routes/: authroute.cpp  authroute.h  channelsroute.cpp  channelsroute.h  static.cpp  static.h  uploadroute.cpp  uploadroute.h  user.cpp  user.h  utils.cpp  utils.h
tools/: gen_py_models.py
